# tspell

./: CMakeLists.txt  README
lib/tspell/: stringtrie.hh  triebase.hh  unitrie.hh
tests/: stringtrie_test.cc  testing.hh  unitrie_test.cc
utils/: tspell.cc
